# auto-bookmark

./: .env  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  USAGE_EXAMPLES.md  base.typ  docker-compose.yml  flake.nix  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
auto-bookmark/: bruno.json
auto-bookmark/Upload/: Add file to request.bru  Create upload request.bru  Get request result.bru  folder.bru
src/: UploadManager.py  UserManager.py  __init__.py  app.rs  generate.py  lib.rs  main.py  main.rs  singleton.py  upload_route.rs
src/generation/: extract_pdf_images.rs  extract_pdf_pages.rs  generate_pdf.rs  mod.rs
src/pages/: file_upload.rs  home.rs  mod.rs
src/static/: progressbar.min.js.map
src/templates/: index.html
