[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auto-bookmark"
dynamic = ["version"]
dependencies = [
    "pdf2image==1.17.0",
    "typst==0.11.1",
    "flask==3.0.3",
    "flask_simplelogin==0.1.3",
    "APScheduler==3.10.4",
]
requires-python = ">=3.12"
authors = [{ "name" = "Zbinden Yohan", "email" = "yohan@yohanzbinden.ch" }]
description = "Auto bookmark PDF files"
readme = "README.md"
license = "MIT"
keywords = ["pdf", "bookmark", "flask", "scheduler"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
]

[project.urls]
Homepage = "https://github.com/yoyozbi/auto-bookmark"
Documentation = "https://github.com/yoyozbi/auto-bookmark"
Repository = "https://github.com/yoyozbi/auto-bookmark.git"
"Bug Tracker" = "https://github.com/yoyozbi/auto-bookmark/issues"

[tool.ruff]
line-length = 79

[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set. By default, Ruff omits rules that
# overlap with the use of a formatter, like Black, but we can override this behavior by
# explicitly adding the rule.
extend-select = ["E501"]
select = ["E4", "E7", "E9", "F"]
